# ocr_ai_backend

./: .env  .env_backup  .gitignore  Dockerfile  README.md  pyproject.toml
app/: crud.py  main.py  models.py  settings.py
app/api/: api.py  deps.py
app/api/routes/: auth.py  file.py  health.py
app/core/: auth.py  file.py  openai.py  token.py
tests/: test_main.py
